--- a/app/main.css
+++ b/app/main.css
@@ -1,9 +1,18 @@
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Roboto'), local('Roboto-Regular'), url(Roboto.woff2) format('woff2');
+}
+
 html,
 body {
     background-color: transparent;
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 div.body {
